--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nodemon": "^2.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "mysql2": "^2.2.5"
   }
 }
